
plugins {
    id 'application'
    id "org.openjfx.javafxplugin" version "0.1.0"
}


application {
    mainClass = 'org.example.PomodoroTimerApp'
}

java {
    sourceCompatibility = '21'
}

// Konfiguration des JavaFX-Plugins: Version und benötigte Module
javafx {
    version = "21.0.3"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

// Abzufragendes Internet-Repository für Bibliotheken (z.B. JavaFX)
repositories { 
    mavenCentral() 
}

// Abhängigkeiten (benötigte und einzubindende Bibliotheken)
dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Initialisierung für JUnit-Testing
test {
    useJUnitPlatform()
}

/* ./gradlew fatJar erzeugt Standalone-JAR (App incl. benoetigter Bibliotheken)
 * Datei wird in Ordner build/libs angelegt
 * Dateiname ist letzte Komponente von application.mainClass (s.o.) + Endung ".jar"
 * Ausfuehrung mit java -jar <dateiname>
 * Mehr Infos: https://www.baeldung.com/gradle-fat-jar
 */
task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    archiveBaseName = application.mainClass.get().split('\\.').last()

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}




// /*
//  * This file was generated by the Gradle 'init' task.
//  *
//  * This generated file contains a sample Java application project to get you started.
//  * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10/userguide/building_java_projects.html in the Gradle documentation.
//  */

// plugins {
//     // Apply the application plugin to add support for building a CLI application in Java.
//     id 'application'
// }

// repositories {
//     // Use Maven Central for resolving dependencies.
//     mavenCentral()
// }

// dependencies {
//     // Use JUnit Jupiter for testing.
//     testImplementation libs.junit.jupiter
//     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//     // This dependency is used by the application.
//     implementation libs.guava
//     // Javafx
//     implementation 'org.openjfx:javafx-controls:22.0.2'
//     implementation 'org.openjfx:javafx-fxml:22.0.2'
// }

// // Apply a specific Java toolchain to ease working on different environments.
// java {
//     toolchain {
//         languageVersion = JavaLanguageVersion.of(22)
//     }
// }

// application {
//     // Define the main class for the application.
//     mainClass = 'org.example.PomodoroTimerApp'
// }

// tasks.named('test') {
//     // Use JUnit Platform for unit tests.
//     useJUnitPlatform()
// }

// run {
//     // Hier werden die JavaFX-Module bereitgestellt
//     jvmArgs = [
//             '--module-path', "${System.properties['java.home']}/lib",
//             '--add-modules', 'javafx.controls,javafx.fxml'
//     ]
// }
